--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,3 @@
-airtest==1.2.5
-asana==0.10.13
-async-timeout==4.0.2
-cached-property==1.5.2
-cachetools==5.2.0
-certifi==2021.10.8
-chardet==3.0.4
-charset-normalizer==2.0.12
-click==8.1.3
-cssselect2==0.6.0
-decorator==5.1.1
-Deprecated==1.2.13
-facebook-wda==1.4.6
-Flask==2.1.2
-Flask-Cors==3.0.10
-google-api-core==2.8.2
-google-auth==2.9.1
-google-cloud-core==2.3.1
-google-cloud-storage==2.3.0
-google-crc32c==1.3.0
-google-resumable-media==2.3.3
-googleapis-common-protos==1.56.4
-greenlet==1.1.2
-gunicorn==20.1.0
-idna==2.10
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-lxml==4.8.0
-MarkupSafe==2.1.1
-mss==6.1.0
 numpy==1.22.3
-oauthlib==3.2.0
-opencv-contrib-python==4.5.5.64
-packaging==21.3
+opencv-python==4.6.0.66
 paho-mqtt==1.6.1
-Pillow==9.1.0
-protobuf==4.21.2
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyMySQL==1.0.2
-pyparsing==3.0.8
-python-xlib==0.31
-pywinauto==0.6.3
-redis==4.2.2
-reportlab==3.6.9
-requests==2.24.0
-requests-oauthlib==1.3.1
-retry==0.9.2
-rsa==4.8
-six==1.16.0
-SQLAlchemy==1.4.39
-svglib==1.2.1
-tinycss2==1.1.1
-urllib3==1.25.11
-webencodings==0.5.1
-Werkzeug==2.1.2
-wrapt==1.14.1
-zipp==3.8.1
